# scripture-study

./: .gitignore  README.md  package-lock.json  package.json  source.config.ts  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md
.claude/agents/: study-companion.md
.claude/commands/: compare.md  conference.md  interview.md  lookup.md  meaningful-questions.md  parallels.md  study.md  themes.md  this-weeks-come-follow-me.md
content/docs/: index.mdx  meta.json
content/docs/conference/: meta.json  moses-1-abraham-3-talks.mdx
content/docs/new-testament/: matthew-13-three-kinds-of-sight.mdx  meta.json
content/docs/old-testament/: meta.json  moses-1-abraham.mdx
content/docs/parallels/: meta.json  (+1 more)
data/: cfm-2026-schedule.json
notes/conference/: 2026-01-11-moses-1-abraham-3-conference-talks.md  2026-02-rasband-oaks-october-talks-review.md
notes/new-testament/: 2026-01-11-matthew-13-three-kinds-of-sight.md
notes/old-testament/: 2026-01-11-moses-1-abraham.md  2026-03-08-jacob-esau-rebekah-primary-lesson.md  2026-03-22-genesis-42-50-sunbeams-lesson.md
notes/parallels/: 2025-01-11-frieren-plan-of-salvation.md  2026-02-08-search-ponder-pray-and-ai.md  2026-02-08-voices-in-scripture.md
notes/personal-questions/: 2026-01-11-tithing-gross-vs-net.md
src/: routeTree.gen.ts
src/lib/: layout.tsx  source.ts
src/routes/: __root.tsx  docs.tsx  index.tsx
src/styles/: globals.css
tools/: freeze-frame-pdf.py
tools/scripture-search/: README.md  pyproject.toml
tools/scripture-search/scripture_search/: __init__.py  cli.py  db.py  import_db.py  search.py
(+6 files in other folders)
